# texture-atlas-generator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  library.cpp  library.h
src/alg/: LSCM.cpp  LSCM.h
src/model/: Mesh.h  Triangulation.h  UvMap.h
